src/kcms/decoration/declarative-plugin/previewclient.h
@@ -78,6 +78,8 @@ public:
     QColor color(ColorGroup group, ColorRole role) const override;
     Qt::Edges adjacentScreenEdges() const override;
     QString windowClass() const override;
+    qreal scale() const override;
+    qreal nextScale() const override;
 
     bool hasApplicationMenu() const override;
     bool isApplicationMenuActive() const override;
