src/plugins/kdecorations/aurorae/src/aurorae.cpp
@@ -580,7 +580,7 @@ void Decoration::updateBuffer()
     if (buffer.isNull()) {
         return;
     }
-    m_contentRect = QRectF(QPoint(0, 0), m_view->contentItem()->size());
+    m_contentRect = QRectF(QPointF(0, 0), m_view->contentItem()->size());
     if (m_padding && (m_padding->left() > 0 || m_padding->top() > 0 || m_padding->right() > 0 || m_padding->bottom() > 0) && !window()->isMaximized()) {
         m_contentRect = m_contentRect.adjusted(m_padding->left(), m_padding->top(), -m_padding->right(), -m_padding->bottom());
     }
