src/window.cpp
@@ -4474,6 +4474,11 @@ void Window::maybeSendFrameCallback()
     }
 }
 
+qreal Window::targetScale() const
+{
+    return m_targetScale;
+}
+
 bool Window::isShown() const
 {
     return !isDeleted() && !isHidden() && !isHiddenByShowDesktop() && !isMinimized();
@@ -4535,16 +4540,17 @@ void Window::doSetModal()
 {
 }
 
-qreal Window::preferredBufferScale() const
+qreal Window::nextTargetScale() const
 {
-    return m_preferredBufferScale;
+    return m_nextTargetScale;
 }
 
-void Window::setPreferredBufferScale(qreal scale)
+void Window::setNextTargetScale(qreal scale)
 {
-    if (m_preferredBufferScale != scale) {
-        m_preferredBufferScale = scale;
+    if (m_nextTargetScale != scale) {
+        m_nextTargetScale = scale;
         doSetPreferredBufferScale();
+        Q_EMIT nextTargetScaleChanged();
     }
 }
 
@@ -4554,7 +4560,15 @@ void Window::doSetPreferredBufferScale()
 
 void Window::updatePreferredBufferScale()
 {
-    setPreferredBufferScale(m_moveResizeOutput->scale());
+    setNextTargetScale(m_moveResizeOutput->scale());
+}
+
+void Window::setTargetScale(qreal scale)
+{
+    if (m_targetScale != scale) {
+        m_targetScale = scale;
+        Q_EMIT targetScaleChanged();
+    }
 }
 
 OutputTransform Window::preferredBufferTransform() const
